$Id: ChangeLog,v 1.179 2005/02/23 06:14:25 hwmaier Exp $

2005-02-23  Henrik Maier  <hwmaier@users.sourceforge.net>

        * app/basemon/basemon.c: Some minor changes to support AT90CAN128 MCU

        * app/basemon/realtek.c, app/basemon/xmemtest.c:
        Changes in order to support AT90CAN128 with it's different register
        structure, changed "ifdef __AVR_ATmega128__" to
        "#ifdef __AVR_ENHANCED__" so the condition also includes AT90CAN128.

        * app/pppc/pppc.c:
        Changed "ifdef __AVR_ATmega128__" to "#ifdef __AVR_ENHANCED__" so the
        condition also includes AT90CAN128.


2005-02-22 Matthias Ringwald <mringwal@.inf.ethz.ch>

	* include/arch/avr.h: Added cpp test to guess avr-libc-version required
	to specify twi.h include path.
	
2005-02-22  Ole Reinhardt <ole.reinhardt@embedded-it.de>

	* os/tracer.c
        Changed "#if defined(__AVR_ATmega128__) || defined(__AVR_ATmega103__) || ..."
        to a more generic "#if defined(__AVR__)"


2005-02-22  Henrik Maier  <hwmaier@users.sourceforge.net>

        * app/Makeburn.avr-uisp-stk500: Replaced hardcoded processor definition
        with MCU definition to allow burning of AT90CAN128 once it is supported
        by uisp.

        * app/Makeburn.avr-jtagice, app/Makeburn.avr-jtagicemkii: Added to
        support Atmel JTAGICE programmers (Windows only, as Atmel provides
        only Windows tools)

        * app/httpd/httpserv.c:
        Changed "#if defined(__AVR_ATmega128__) || defined(__AVR_ATmega103__)"
        to a more generic "#if defined(__AVR__)" in order to support
        AT90CAN128 device as well.


2005-02-21 Philipp Blum <blum@tik.ee.ethz.ch>

        * dev/usartavr.c, include/sys/atom.h, include/sys/tracer.h,
        os/event.c, os/thread.c, os/timer.c, os/tracer.c, os/arch/avr_timer.c
        Removed tabs and added semicolons after NUTTRACER macros

2005-02-21  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* os/tracer.c